--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <script src="js/objects.js"></script>
         <script src="js/mouse_detection.js"></script>
         <script src="js/render.js"></script>
+        <script src="js/game_logic.js"></script>
 
     </body>
 
