--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
         <title>blockpuzzle.js</title>
 
     </head>
@@ -14,6 +16,7 @@
         <div id="images"></div>
 
         <div id="main">
+            <h2 id="score">0</h2>
             <canvas id="render_canvas"></canvas>
         </div>
 
