--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         <div id="images"></div>
 
         <div id="main">
-            <h2 id="score">0</h2>
-            <div class="btn" id="reset-btn">
-                <div id="reset-btn-content">
-                    <div id="reset-icon"></div>reset
+            <div id="main-infobar">
+                <h2 id="score">0</h2>
+                <div class="btn" id="reset-btn">
+                    <div id="reset-btn-content">
+                        <div id="reset-icon"></div>reset
+                    </div>
                 </div>
             </div>
             <canvas id="render_canvas"></canvas>
