--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="icon" href="assets/icon.png">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
         <title>blockpuzzle.js</title>
 
@@ -43,6 +44,8 @@
         <script src="js/mouse_detection.js"></script>
         <script src="js/render.js"></script>
         <script src="js/tiles.js"></script>
+        <script src="js/animations.js"></script>
+        <script src="js/animation.js"></script>
         <script src="js/game_logic.js"></script>
         <script src="js/ui.js"></script>
 
