--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="icon" href="assets/icon.png">
+        <link rel="icon" href="assets/general/icon.png">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
         <title>blockpuzzle.js</title>
 
