added a shuffle bonus

--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@
 
             <div id="main-infobar">
                 <h2 id="score">0</h2>
-                <div class="btn" id="reset-btn">
-                    <div id="reset-btn-content">
-                        <div id="reset-icon"></div>reset
+                <div id="buttons-container">
+                    <div class="btn bonus" id="random-btn">
+                        <div id="random-icon"></div>
+                        <div id="random-text"></div>
+                        <div class="info-bubble" id="random-bubble"></div>
+                    </div>
+                    <div class="btn" id="reset-btn">
+                        <div id="reset-btn-content">
+                            <div id="reset-icon"></div>reset
+                        </div>
                     </div>
                 </div>
             </div>
