--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <script src="js/animations.js"></script>
         <script src="js/animation.js"></script>
         <script src="js/game_logic.js"></script>
+        <script src="js/save.js"></script>
         <script src="js/ui.js"></script>
 
     </body>
